--- a/index.html
+++ b/index.html
@@ -7,135 +7,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <style>
-        body {
-            padding-top: 56px;
-        }
-/* navbar */
-        .navbar{
-            border-bottom: 1px black solid;
-        }
-        .navbar-scrolled {
-            background-color: transparent;
-            transition: background-color 0.5s ease;
-        }
-
-        .navbar-nav {
-            margin: 0 auto;
-            display: flex;
-            justify-content: center;
-        }
-
-        .navbar-nav .nav-item {
-            margin-right: 15px;
-        }
-
-        /* carousel */
-        #carouselExampleIndicators .carousel-item img {
-            max-height: 300px;
-            width: auto;
-            margin: auto;
-        }
-        .carousel-indicators [data-bs-target] {
-            box-sizing: content-box;
-            flex: 0 1 auto;
-            width: 12px; 
-            height: 12px;
-            margin-right: 5px;
-            margin-left: 5px;
-            text-indent: -999px;
-            cursor: pointer;
-            background-color: #fff;
-            background-clip: padding-box;
-            border: 0;
-            border-radius: 50%;
-            opacity: 0.5;
-            transition: opacity 0.6s ease;
-        }
-
-        .carousel-indicators [data-bs-target].active {
-            opacity: 1;
-            background-color: red;
-        }
-
-
-        .container {
-        display: flex;
-        flex-direction: column;
-        }
-
-        .wrapper {
-            display: flex;
-            align-items: center;
-        }
-
-        .vertical-line {
-            width: 16px;
-            height: 30px;
-            background-color: red;
-            margin-right: 15px;
-        }
-
-        .text {
-            color: red;
-        }
-
-        .text h4 {
-            margin: 0;
-            margin-left: -3%;
-        }
-
-        .fa-star {
-        color: gray;
-        }
-
-        .checked {
-            color: yellow;
-        }
-
-        .view{
-            background-color: #DB4444; 
-            border: none; 
-            color: #FAFAFA; 
-            height: 40px; 
-            width: 15%;
-        }
-        footer {
-            background-color: black;
-            color: #FAFAFA
-        }
-
-        #btn-top {
-        display: none;
-        position: fixed;
-        bottom: 20px;
-        right: 30px;
-        z-index: 99;
-        border: none;
-        outline: none;
-        background-color: black;
-        color: white;
-        cursor: pointer;
-        border-radius: 50%; 
-        width: 40px;
-        height: 40px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        }
-        #btn-top i {
-        font-size: 18px; 
-        color: white;
-        }
-        #btn-top:hover {
-        background-color: #555;
-        }
-    </style>
+    <link rel="stylesheet" href="assets/index.css">
     <title>Home</title>
 </head>
 <body>
     <button onclick="topFunction()" id="btn-top" title="Go to top"><i class="fa-solid fa-arrow-up"></i></button>
-    <nav class="navbar navbar-expand-lg fixed-top navbar-scrolled">
+    <div class="loader-container" id="loader-container">
+        <div class="loader"></div>
+      </div>
+    <nav class="navbar bg-dark navbar-expand-lg fixed-top navbar-scrolled">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Navbar</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -146,8 +26,8 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Product</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link active" href="product.html">Product</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Contact</a>
@@ -179,7 +59,7 @@
         </div>
     </div>
 
-    <div class="container mt-3 mb-3">
+    <div class="container my-3">
         <div class="wrapper">
             <div class="vertical-line"></div>
             <div class="text">
@@ -349,7 +229,7 @@
     </div>
 
     <div class="container text-center mb-3">
-        <a href=""><button class="view">View All Products</button></a>
+        <a href="product.html"><button class="view">View All Products</button></a>
     </div>
     
     <div class="container mt-3 mb-3">
@@ -362,6 +242,7 @@
         <div class="wrapper mt-3">
             <h3>New Arrival</h3>
         </div>
+        <img class="my-2" src="assets/image/Frame 739.png" alt="">
     </div>    
 
     
@@ -381,10 +262,10 @@
                 </div>
                 <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4 d-flex flex-column">
                     <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-                    <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
+                    <p><i class="fas fa-home me-3"></i> Surabaya, Jawa Timur, Indonesia</p>
                     <p>
                         <i class="fas fa-envelope me-3"></i>
-                        info@example.com
+                        mfahrilrizal@gmail.com
                     </p>
                     <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
                     <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
@@ -393,9 +274,9 @@
                     <h6 class="text-uppercase fw-bold mb-4">
                         Products
                     </h6>
-                    <p>Laptop</p>
-                    <p>Aksesoris</p>
-                    <p>Komputer</p>
+                    <p><i class="fa-solid fa-laptop me-3"></i>Laptop</p>
+                    <p><i class="fa-solid fa-computer-mouse me-3"></i>Aksesoris</p>
+                    <p><i class="fa-solid fa-computer me-3"></i>Komputer</p>
                 </div>
                 <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4 d-flex">
                     <a href="" class="me-4 text-reset">
@@ -420,46 +301,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script>
-        //navbar
-        document.addEventListener("scroll", function () {
-            var navbar = document.querySelector(".navbar");
-            navbar.classList.toggle("navbar-scrolled", window.scrollY > 0);
-        });
-
-        //btn-to-top
-        let mybutton = document.getElementById("btn-top");
-        window.onload = function() {
-            if (document.body.scrollTop > 30 || document.documentElement.scrollTop > 30) {
-                mybutton.style.display = "block";
-            } else {
-                mybutton.style.display = "none";
-            }
-        };
-
-        window.onscroll = function() {
-            scrollFunction();
-        };
-
-        function scrollFunction() {
-            if (document.body.scrollTop > 30 || document.documentElement.scrollTop > 30) {
-                mybutton.style.display = "block";
-            } else {
-                mybutton.style.display = "none";
-            }
-        }
-
-        function topFunction() {
-            document.body.style.scrollBehavior = "smooth";
-            document.documentElement.style.scrollBehavior = "smooth";
-            document.body.scrollTop = 0;
-            document.documentElement.scrollTop = 0;
-
-            setTimeout(function() {
-                document.body.style.scrollBehavior = "auto";
-                document.documentElement.style.scrollBehavior = "auto";
-            }, 1000);
-        }
-    </script>
+    <script src="assets/main.js"></script>
 </body>
 </html>
