--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
 </head>
 <body>
     <button onclick="topFunction()" id="btn-top" title="Go to top"><i class="fa-solid fa-arrow-up"></i></button>
-    <div class="loader-container" id="loader-container">
-        <div class="loader"></div>
-      </div>
-    <nav class="navbar bg-dark navbar-expand-lg fixed-top navbar-scrolled">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-scrolled">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Navbar</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,17 +45,35 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="https://storage-asset.msi.com/global/picture/banner/banner_1685351136d52d76e3c13992b8ec6ce0d67ff46b5b.jpeg" class="d-block w-100">
+            <img src="assets/image/1.png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
+            <img src="assets/image/2.png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
+            <img src="assets/image/1.png" class="d-block w-100" alt="...">
           </div>
         </div>
-    </div>
+      </div>
 
+    <div class="row" style="margin-top: 3%; margin-left: 0.5%; margin-bottom: 3%;">
+        <div class="col">
+            <div class="card" style="background-color: #524BAD; height: 400px; justify-content: center;">
+                <div class="text-content mx-3">
+                    <h1 style="color: white;">Elevate Your Brand</h1>
+                    <h1 style="color: white;">with Our<span style="color: #4EB542;"> Digital</span></h1>
+                    <h1 style="color: white;">Print Services</h1>
+                </div>                
+                <div class="col-gambar" style="flex: 1; display: flex; justify-content: flex-end; align-items: center;">
+                    <img src="assets/image/headset.png" alt="" style="width: 30%; max-height: 100%; object-fit: contain;">
+                </div>
+                <div class="text-content1">
+                    <a href="contact.html"><button type="button" class="btn">Get started &nbsp; <i class="fa-solid fa-caret-right fa-lg"></i></button></a>
+                </div>
+            </div>
+        </div>
+    </div>
+    
     <div class="container my-3">
         <div class="wrapper">
             <div class="vertical-line"></div>
@@ -300,6 +315,8 @@
         </div>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="assets/main.js"></script>
 </body>
