--- a/product.html
+++ b/product.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <button onclick="topFunction()" id="btn-top" title="Go to top"><i class="fa-solid fa-arrow-up"></i></button>
-    <nav class="navbar bg-dark navbar-expand-lg fixed-top navbar-scrolled">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-scrolled" id="navbar">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">Navbar</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -90,16 +90,18 @@
     </div>
 
     <div class="container" style="margin-top: 6%;">
-        <div class="wrapper">
+        <div class="wrapper" style="display: flex; align-items: center;">
             <div class="vertical-line"></div>
             <div class="text">
                 <h4>Products</h4>
             </div>
-            <div class="see-more-button">
-                <button type="button" class="see" onclick="scrollToSmoothly()" id="just" >See More</button>
+            <div class="see-more-button" style="margin-left: auto;">
+                <button type="button" class="see" onclick="scrollToSmoothly()" id="just">See More</button>
             </div>
         </div>
     </div>
+    
+    
 
     <div class="container my-3">
         <div class="row">
