--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
     
     
 
-    <div class="row" style="margin-top: 3%; margin-left: 0.5%; margin-bottom: 3%;">
+    <div class="row mx-auto my-3">
         <div class="col">
             <div class="card" style="background-color: #524BAD; height: 400px; justify-content: center;">
                 <div class="text-content mx-3">
                     <h1 style="color: white;">Elevate Your Brand</h1>
-                    <h1 style="color: white;">with Our<span style="color: #4EB542;"> Digital</span></h1>
+                    <h1 style="color: white;">with Our <span class="text" style="color: #4EB542;"></span></h1>
                     <h1 style="color: white;">Print Services</h1>
                 </div>                
                 <div class="col-gambar" style="flex: 1; display: flex; justify-content: flex-end; align-items: center;">
@@ -304,5 +304,17 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="assets/main.js"></script>
+    <!-- Load library from the CDN -->
+  <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+
+  <!-- Setup and start animation! -->
+  <script>
+    var typed = new Typed('.text', {
+      strings: ['Digital'],
+      typeSpeed: 100,
+      backSpeed: 100,
+      loop: true,
+    });
+  </script>
 </body>
 </html>
