--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link active" href="product.html">Product</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="product.html">Product</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Contact</a>
+                        <a class="nav-link" aria-current="page" href="#">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">About</a>
+                        <a class="nav-link" aria-current="page" href="#">About</a>
                     </li>
                 </ul>
             </div>
