--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;600;700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="assets/image/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -28,10 +29,10 @@
                         <a class="nav-link" aria-current="page" href="product.html">Product</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">Contact</a>
+                        <a class="nav-link" aria-current="page" href="contact.html">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">About</a>
+                        <a class="nav-link" aria-current="page" href="about.html">About</a>
                     </li>
                 </ul>
             </div>
@@ -236,28 +237,33 @@
             <div class="container">
                 <div class="text-footer" style="text-align: center;">
                     <h2>Who we are</h2>
-                    <p style="margin: 4% 0 4% 0;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat nobis reiciendis et velit accusantium voluptatibus cumque, provident iure ipsum facere explicabo nam assumenda neque dolorem molestias debitis pariatur, alias in!</p>
+                    <p style="margin: 4% 0 4% 0;">"Welcome to Infinite Tech, where limitless 
+                        innovation shapes the future of technology at an unmatched pace. Beyond tech, we invite you on an immersive journey without limits."</p>
                 </div>
                 <div class="row">
                     <div class="col-6 col-md-4">
                         <div class="card text-center">
                             <img class="mx-auto d-block my-3" src="assets/image/roket.png" alt="" style="width: 20%;">
-                            <h4>Lorem ipsum dolor sit amet</h4>
-                            <p style="margin-top: 10%;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate fugit omnis dolores repellendus, repellat numquam velit labore id possimus quod, harum aliquid officia, fugiat perspiciatis. Dolorum quae porro nemo quam.</p>
+                            <h4>Technological Development</h4>
+                            <p style="margin-top: 10%;">"At Infinite Tech, we lead in accelerating technology with an innovative spirit. 
+                                Committed to shaping the future through rapid technological evolution, we ensure every customer benefits 
+                                from efficient progress."</p>
                         </div>
                     </div>
                     <div class="col-6 col-md-4">
                         <div class="card text-center">
                             <img class="mx-auto d-block my-3" src="assets/image/lampu.png" alt="" style="width: 16.5%;">
-                            <h4>Lorem ipsum dolor sit amet</h4>
-                            <p style="margin-top: 10%;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate fugit omnis dolores repellendus, repellat numquam velit labore id possimus quod, harum aliquid officia, fugiat perspiciatis. Dolorum quae porro nemo quam.</p>
+                            <h4>Technological Innovation</h4>
+                            <p style="margin-top: 10%;">"Welcome to Infinite Tech, where creativity meets technology. 
+                                We pioneer innovation, pushing boundaries to create advanced solutions. Committed to shaping the future through revolutionary discoveries, 
+                                we deliver unimaginable solutions for a continuous era of innovation."</p>
                         </div>
                     </div>
                     <div class="col-6 col-md-4">
                         <div class="card text-center">
                             <img class="mx-auto d-block my-3" src="assets/image/roket.png" alt="" style="width: 20%;">
                             <h4>Lorem ipsum dolor sit amet</h4>
-                            <p style="margin-top: 10%;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate fugit omnis dolores repellendus, repellat numquam velit labore id possimus quod, harum aliquid officia, fugiat perspiciatis. Dolorum quae porro nemo quam.</p>
+                            <p style="margin-top: 10%;"></p>
                         </div>
                     </div>
                 </div>
@@ -313,7 +319,7 @@
                     <p><i class="fas fa-home me-3"></i> Surabaya, Jawa Timur, Indonesia</p>
                     <p>
                         <i class="fas fa-envelope me-3"></i>
-                        mfahrilrizal@gmail.com
+                        infinitetech@gmail.com
                     </p>
                     <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
                     <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
