--- a/product.html
+++ b/product.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;600;700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="assets/image/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -77,10 +80,10 @@
                       <a class="nav-link active" aria-current="page" href="product.html">Product</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" aria-current="page" href="#">Contact</a>
+                      <a class="nav-link" aria-current="page" href="contact.html">Contact</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" aria-current="page" href="#">About</a>
+                      <a class="nav-link" aria-current="page" href="about.html">About</a>
                   </li>
               </ul>
           </div>
