--- a/product.html
+++ b/product.html
@@ -132,7 +132,7 @@
                 </div>
             </div>
             <div class="card mx-auto" style="width: 24%;">
-                <img src="" class="card-img-top" alt=""/>
+                <img src="assets/image/produk/gpu1.jpg" class="card-img-top" alt=""/>
                 <div class="card-body">
                     <p class="card-text">MSI Cyborg 15 A13VE-470ID</p>
                     <div class="card-text" style="display: flex; justify-content: space-between;">
@@ -141,7 +141,7 @@
                 </div>
             </div>
             <div class="card mx-auto" style="width: 24%;">
-                <img src="" class="card-img-top" alt=""/>
+                <img src="assets/image/produk/processor 1.jpg" class="card-img-top" alt=""/>
                 <div class="card-body">
                     <p class="card-text">MSI Creator M16 B13VE</p>
                     <div class="card-text" style="display: flex; justify-content: space-between;">
@@ -150,7 +150,7 @@
                 </div>
             </div>
             <div class="card mx-auto" style="width: 24%;">
-                <img src="" class="card-img-top" alt=""/>
+                <img src="assets/image/produk/ram.png" class="card-img-top" alt=""/>
                 <div class="card-body">
                     <p class="card-text">MSI GF65 Thin 10SDR</p>
                     <div class="card-text" style="display: flex; justify-content: space-between;">
@@ -187,7 +187,7 @@
                 </div>
             </div>
             <div class="card mx-auto" style="width: 24%;">
-                <img src="" class="card-img-top" alt=""/>
+                <img src="assets/image/produk/p2.jpg" class="card-img-top" alt=""/>
                 <div class="card-body">
                     <p class="card-text">MSI Cyborg 15 A13VE-470ID</p>
                     <div class="card-text" style="display: flex; justify-content: space-between;">
@@ -196,7 +196,7 @@
                 </div>
             </div>
             <div class="card mx-auto" style="width: 24%;">
-                <img src="" class="card-img-top" alt=""/>
+                <img src="assets/image/produk/p9.png" class="card-img-top" alt=""/>
                 <div class="card-body">
                     <p class="card-text">MSI Creator M16 B13VE</p>
                     <div class="card-text" style="display: flex; justify-content: space-between;">
@@ -205,7 +205,7 @@
                 </div>
             </div>
             <div class="card mx-auto" style="width: 24%;">
-                <img src="" class="card-img-top" alt=""/>
+                <img src="assets/image/produk/monitor2.png" class="card-img-top" alt=""/>
                 <div class="card-body">
                     <p class="card-text">MSI GF65 Thin 10SDR</p>
                     <div class="card-text" style="display: flex; justify-content: space-between;">
@@ -241,7 +241,7 @@
                 </div>
             </div>
             <div class="card mx-auto" style="width: 24%;">
-                <img src="" class="card-img-top" alt=""/>
+                <img src="assets/image/produk/p2.jpg" class="card-img-top" alt=""/>
                 <div class="card-body">
                     <p class="card-text">MSI Cyborg 15 A13VE-470ID</p>
                     <div class="card-text" style="display: flex; justify-content: space-between;">
@@ -250,7 +250,7 @@
                 </div>
             </div>
             <div class="card mx-auto" style="width: 24%;">
-                <img src="" class="card-img-top" alt=""/>
+                <img src="assets/image/produk/monitor.jpg" class="card-img-top" alt=""/>
                 <div class="card-body">
                     <p class="card-text">MSI Creator M16 B13VE</p>
                     <div class="card-text" style="display: flex; justify-content: space-between;">
@@ -259,7 +259,7 @@
                 </div>
             </div>
             <div class="card mx-auto" style="width: 24%;">
-                <img src="" class="card-img-top" alt=""/>
+                <img src="assets/image/produk/p10.jpg" class="card-img-top" alt=""/>
                 <div class="card-body">
                     <p class="card-text">MSI GF65 Thin 10SDR</p>
                     <div class="card-text" style="display: flex; justify-content: space-between;">
@@ -269,7 +269,7 @@
             </div>
             <!-- row-2 -->
             <div class="card mx-auto my-3" style="width: 24%;">
-                <img src="" class="card-img-top" alt=""/>
+                <img src="assets/image/produk/p3.png" class="card-img-top" alt=""/>
                 <div class="card-body">
                     <p class="card-text">GF63 Thin 11SC-654ID</p>
                     <div class="card-text" style="display: flex; justify-content: space-between;">
@@ -278,7 +278,7 @@
                 </div>
             </div>
             <div class="card mx-auto my-3" style="width: 24%;">
-                <img src="" class="card-img-top" alt=""/>
+                <img src="assets/image/produk/mouse1.jpg" class="card-img-top" alt=""/>
                 <div class="card-body">
                     <p class="card-text">GF63 Thin 11SC-654ID</p>
                     <div class="card-text" style="display: flex; justify-content: space-between;">
@@ -287,7 +287,7 @@
                 </div>
             </div>
             <div class="card mx-auto my-3" style="width: 24%;">
-                <img src="" class="card-img-top" alt=""/>
+                <img src="assets/image/produk/p6.png" class="card-img-top" alt=""/>
                 <div class="card-body">
                     <p class="card-text">GF63 Thin 11SC-654ID</p>
                     <div class="card-text" style="display: flex; justify-content: space-between;">
@@ -296,7 +296,7 @@
                 </div>
             </div>
             <div class="card mx-auto my-3" style="width: 24%;">
-                <img src="" class="card-img-top" alt=""/>
+                <img src="assets/image/produk/p1.png" class="card-img-top" alt=""/>
                 <div class="card-body">
                     <p class="card-text">GF63 Thin 11SC-654ID</p>
                     <div class="card-text" style="display: flex; justify-content: space-between;">
@@ -306,7 +306,7 @@
             </div>
             <!-- row-3 -->
             <div class="card mx-auto my-3" style="width: 24%;">
-                <img src="" class="card-img-top" alt=""/>
+                <img src="assets/image/produk/gpu4.png" class="card-img-top" alt=""/>
                 <div class="card-body">
                     <p class="card-text">GF63 Thin 11SC-654ID</p>
                     <div class="card-text" style="display: flex; justify-content: space-between;">
@@ -315,7 +315,7 @@
                 </div>
             </div>
             <div class="card mx-auto my-3" style="width: 24%;">
-                <img src="" class="card-img-top" alt=""/>
+                <img src="assets/image/produk/p8.jpg" class="card-img-top" alt=""/>
                 <div class="card-body">
                     <p class="card-text">GF63 Thin 11SC-654ID</p>
                     <div class="card-text" style="display: flex; justify-content: space-between;">
@@ -324,7 +324,7 @@
                 </div>
             </div>
             <div class="card mx-auto my-3" style="width: 24%;">
-                <img src="" class="card-img-top" alt=""/>
+                <img src="assets/image/produk/stik2.png" class="card-img-top" alt=""/>
                 <div class="card-body">
                     <p class="card-text">GF63 Thin 11SC-654ID</p>
                     <div class="card-text" style="display: flex; justify-content: space-between;">
@@ -333,7 +333,7 @@
                 </div>
             </div>
             <div class="card mx-auto my-3" style="width: 24%;">
-                <img src="" class="card-img-top" alt=""/>
+                <img src="assets/image/produk/p9.png" class="card-img-top" alt=""/>
                 <div class="card-body">
                     <p class="card-text">GF63 Thin 11SC-654ID</p>
                     <div class="card-text" style="display: flex; justify-content: space-between;">
@@ -343,7 +343,7 @@
             </div>
             <!-- row-4 -->
             <div class="card mx-auto my-3" style="width: 24%;">
-                <img src="" class="card-img-top" alt=""/>
+                <img src="assets/image/produk/mac.jpeg" class="card-img-top" alt=""/>
                 <div class="card-body">
                     <p class="card-text">GF63 Thin 11SC-654ID</p>
                     <div class="card-text" style="display: flex; justify-content: space-between;">
@@ -352,7 +352,7 @@
                 </div>
             </div>
             <div class="card mx-auto my-3" style="width: 24%;">
-                <img src="" class="card-img-top" alt=""/>
+                <img src="assets/image/produk/cooler1.jpg" class="card-img-top" alt=""/>
                 <div class="card-body">
                     <p class="card-text">GF63 Thin 11SC-654ID</p>
                     <div class="card-text" style="display: flex; justify-content: space-between;">
@@ -361,7 +361,7 @@
                 </div>
             </div>
             <div class="card mx-auto my-3" style="width: 24%;">
-                <img src="" class="card-img-top" alt=""/>
+                <img src="assets/image/produk/cooler2.png" class="card-img-top" alt=""/>
                 <div class="card-body">
                     <p class="card-text">GF63 Thin 11SC-654ID</p>
                     <div class="card-text" style="display: flex; justify-content: space-between;">
@@ -370,7 +370,7 @@
                 </div>
             </div>
             <div class="card mx-auto my-3" style="width: 24%;">
-                <img src="" class="card-img-top" alt=""/>
+                <img src="assets/image/produk/ssd2.jpg" class="card-img-top" alt=""/>
                 <div class="card-body">
                     <p class="card-text">GF63 Thin 11SC-654ID</p>
                     <div class="card-text" style="display: flex; justify-content: space-between;">
@@ -413,7 +413,7 @@
                   <p><i class="fas fa-home me-3"></i> Surabaya, Jawa Timur, Indonesia</p>
                   <p>
                       <i class="fas fa-envelope me-3"></i>
-                      mfahrilrizal@gmail.com
+                      infinitetech@gmail.com
                   </p>
                   <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
                   <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
