--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                 <div class="row">
                     <div class="col-6 col-md-4">
                         <div class="card text-center">
-                            <img class="mx-auto d-block my-3" src="assets/image/roket.png" alt="" style="width: 20%;">
+                            <img class="mx-auto d-block my-5" src="assets/image/roket.png" alt="" style="width: 15%;">
                             <h4>Technological Development</h4>
                             <p style="margin-top: 10%;">"At Infinite Tech, we lead in accelerating technology with an innovative spirit. 
                                 Committed to shaping the future through rapid technological evolution, we ensure every customer benefits 
@@ -252,8 +252,8 @@
                     </div>
                     <div class="col-6 col-md-4">
                         <div class="card text-center">
-                            <img class="mx-auto d-block my-3" src="assets/image/lampu.png" alt="" style="width: 16.5%;">
-                            <h4>Technological Innovation</h4>
+                            <img class="mx-auto d-block my-5" src="assets/image/lampu.png" alt="" style="width: 15%;">
+                            <h4 style="margin-top: -3%;">Technological Innovation</h4>
                             <p style="margin-top: 10%;">"Welcome to Infinite Tech, where creativity meets technology. 
                                 We pioneer innovation, pushing boundaries to create advanced solutions. Committed to shaping the future through revolutionary discoveries, 
                                 we deliver unimaginable solutions for a continuous era of innovation."</p>
@@ -261,7 +261,7 @@
                     </div>
                     <div class="col-6 col-md-4">
                         <div class="card text-center">
-                            <img class="mx-auto d-block my-3" src="assets/image/roket.png" alt="" style="width: 20%;">
+                            <img class="mx-auto d-block my-5" src="assets/image/roket.png" alt="" style="width: 15%;">
                             <h4>Lorem ipsum dolor sit amet</h4>
                             <p style="margin-top: 10%;"></p>
                         </div>
