--- a/product.html
+++ b/product.html
@@ -90,7 +90,7 @@
       </div>
   </nav>
   
-    <div id="carouselExampleIndicators" class="carousel slide">
+    <div id="carouselExampleIndicators" class="carousel slide mt-2">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -143,7 +143,7 @@
             <div class="card mx-auto" style="width: 24%;">
                 <img src="assets/image/produk/processor 1.jpg" class="card-img-top" alt=""/>
                 <div class="card-body">
-                    <p class="card-text">MSI Creator M16 B13VE</p>
+                    <p class="card-text" style="margin-top: 22%;">MSI Creator M16 B13VE</p>
                     <div class="card-text" style="display: flex; justify-content: space-between;">
                         <span style="color: red;">Rp.23.999.000</span>
                     </div>
@@ -152,7 +152,7 @@
             <div class="card mx-auto" style="width: 24%;">
                 <img src="assets/image/produk/ram.png" class="card-img-top" alt=""/>
                 <div class="card-body">
-                    <p class="card-text">MSI GF65 Thin 10SDR</p>
+                    <p class="card-text" style="margin-top: 35%;">MSI GF65 Thin 10SDR</p>
                     <div class="card-text" style="display: flex; justify-content: space-between;">
                         <span style="color: red;">Rp.17.449.000</span>
                     </div>
@@ -180,36 +180,36 @@
             <div class="card mx-auto" data-bs-toggle="modal" data-bs-target="#product2" style="width: 24%;">
                 <img src="assets/image/produk1/p4.png" class="card-img-top" alt=""/>
                 <div class="card-body">
-                    <p class="card-text">Twister DXV2.6 360 Liquid CPU Cooler</p>
+                    <p class="card-text">Twister Liquid CPU Cooler</p>
                     <div class="card-text" style="display: flex; justify-content: space-between;">
-                        <span style="color: red;">Rp.1.310.000</span>
+                        <span style="color: red; margin-top: 10%;">Rp.1.310.000</span>
                     </div>
                 </div>
             </div>
             <div class="card mx-auto" style="width: 24%;">
                 <img src="assets/image/produk/p2.jpg" class="card-img-top" alt=""/>
                 <div class="card-body">
-                    <p class="card-text">MSI Cyborg 15 A13VE-470ID</p>
+                    <p class="card-text" style="margin-top: 13%;">MSI Cyborg 15 A13VE-470ID</p>
                     <div class="card-text" style="display: flex; justify-content: space-between;">
-                        <span style="color: red;">Rp.16.999.000</span>
+                        <span style="color: red; margin-top: 10%;">Rp.16.999.000</span>
                     </div>
                 </div>
             </div>
             <div class="card mx-auto" style="width: 24%;">
                 <img src="assets/image/produk/p9.png" class="card-img-top" alt=""/>
                 <div class="card-body">
-                    <p class="card-text">MSI Creator M16 B13VE</p>
+                    <p class="card-text" style="margin-top: 40%;">MSI Creator M16 B13VE</p>
                     <div class="card-text" style="display: flex; justify-content: space-between;">
-                        <span style="color: red;">Rp.23.999.000</span>
+                        <span style="color: red; margin-top: 10%;">Rp.23.999.000</span>
                     </div>
                 </div>
             </div>
             <div class="card mx-auto" style="width: 24%;">
                 <img src="assets/image/produk/monitor2.png" class="card-img-top" alt=""/>
                 <div class="card-body">
-                    <p class="card-text">MSI GF65 Thin 10SDR</p>
+                    <p class="card-text" style="margin-top: 2%;">MSI GF65 Thin 10SDR</p>
                     <div class="card-text" style="display: flex; justify-content: space-between;">
-                        <span style="color: red;">Rp.17.449.000</span>
+                        <span style="color: red; margin-top: 9%;">Rp.17.449.000</span>
                     </div>
                 </div>
             </div>
@@ -243,9 +243,9 @@
             <div class="card mx-auto" style="width: 24%;">
                 <img src="assets/image/produk/p2.jpg" class="card-img-top" alt=""/>
                 <div class="card-body">
-                    <p class="card-text">MSI Cyborg 15 A13VE-470ID</p>
+                    <p class="card-text" style="margin-top: 12%;">MSI Cyborg 15 A13VE-470ID</p>
                     <div class="card-text" style="display: flex; justify-content: space-between;">
-                        <span style="color: red;">Rp.16.999.000</span>
+                        <span style="color: red; margin-top: 10%;">Rp.16.999.000</span>
                     </div>
                 </div>
             </div>
@@ -254,16 +254,16 @@
                 <div class="card-body">
                     <p class="card-text">MSI Creator M16 B13VE</p>
                     <div class="card-text" style="display: flex; justify-content: space-between;">
-                        <span style="color: red;">Rp.23.999.000</span>
+                        <span style="color: red; margin-top: 10%;">Rp.23.999.000</span>
                     </div>
                 </div>
             </div>
             <div class="card mx-auto" style="width: 24%;">
                 <img src="assets/image/produk/p10.jpg" class="card-img-top" alt=""/>
                 <div class="card-body">
-                    <p class="card-text">MSI GF65 Thin 10SDR</p>
+                    <p class="card-text" style="margin-top: 28%;">MSI GF65 Thin 10SDR</p>
                     <div class="card-text" style="display: flex; justify-content: space-between;">
-                        <span style="color: red;">Rp.17.449.000</span>
+                        <span style="color: red; margin-top: 10%;">Rp.17.449.000</span>
                     </div>
                 </div>
             </div>
@@ -271,7 +271,7 @@
             <div class="card mx-auto my-3" style="width: 24%;">
                 <img src="assets/image/produk/p3.png" class="card-img-top" alt=""/>
                 <div class="card-body">
-                    <p class="card-text">GF63 Thin 11SC-654ID</p>
+                    <p class="card-text" style="margin-top: 28%;">GF63 Thin 11SC-654ID</p>
                     <div class="card-text" style="display: flex; justify-content: space-between;">
                         <span style="color: red;">Rp.9.399.000</span>
                     </div>
@@ -296,9 +296,9 @@
                 </div>
             </div>
             <div class="card mx-auto my-3" style="width: 24%;">
-                <img src="assets/image/produk/p1.png" class="card-img-top" alt=""/>
+                <img src="assets/image/produk/p1.png" class="card-img-top" alt="" style="margin-top: 10%;"/>
                 <div class="card-body">
-                    <p class="card-text">GF63 Thin 11SC-654ID</p>
+                    <p class="card-text" style="margin-top: 11%;">GF63 Thin 11SC-654ID</p>
                     <div class="card-text" style="display: flex; justify-content: space-between;">
                         <span style="color: red;">Rp.9.399.000</span>
                     </div>
@@ -324,7 +324,7 @@
                 </div>
             </div>
             <div class="card mx-auto my-3" style="width: 24%;">
-                <img src="assets/image/produk/stik2.png" class="card-img-top" alt=""/>
+                <img src="assets/image/produk/stik2.png" class="card-img-top" alt="" style="width: 78%; margin-left: 10%;"/>
                 <div class="card-body">
                     <p class="card-text">GF63 Thin 11SC-654ID</p>
                     <div class="card-text" style="display: flex; justify-content: space-between;">
@@ -343,7 +343,7 @@
             </div>
             <!-- row-4 -->
             <div class="card mx-auto my-3" style="width: 24%;">
-                <img src="assets/image/produk/mac.jpeg" class="card-img-top" alt=""/>
+                <img src="assets/image/produk/mac.png" class="card-img-top" alt="" style="width: 81%; margin-left: 10%;"/>
                 <div class="card-body">
                     <p class="card-text">GF63 Thin 11SC-654ID</p>
                     <div class="card-text" style="display: flex; justify-content: space-between;">
