--- a/contact.html
+++ b/contact.html
@@ -11,22 +11,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/contact.css">
     <title>Contact Us</title>
-    <!-- <style>
-        #notification {
-        display: none;
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 80%;
-        max-width: 400px; /* Sesuaikan lebar maksimum sesuai kebutuhan */
-        background-color: #4CAF50;
-        color: white;
-        text-align: center;
-        padding: 15px;
-        z-index: 1000;
-        }
-    </style> -->
 </head>
 <body>
     <button onclick="topFunction()" id="btn-top" title="Go to top"><i class="fa-solid fa-arrow-up"></i></button>
@@ -55,9 +39,9 @@
         </div>
     </nav>
 
-    <div class="contact-container">
+    <div class="contact-container mt-2">
         <div class="contact-hero">
-            <img src="assets/image/Background.png" alt="">
+            <img src="assets/image/Background.png" alt="" style="width: 100%;">
             <div class="contact-info">
                 <h1 class="contact-title">Get in Touch</h1>
                 <div class="contact-details">
