--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/index.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <title>Home</title>
 </head>
 <body>
@@ -237,33 +238,37 @@
             <div class="container">
                 <div class="text-footer" style="text-align: center;">
                     <h2>Who we are</h2>
-                    <p style="margin: 4% 0 4% 0;">"Welcome to Infinite Tech, where limitless 
-                        innovation shapes the future of technology at an unmatched pace. Beyond tech, we invite you on an immersive journey without limits."</p>
+                    <h3 style="margin: 4% 0 4% 0; color: #9F9E9E;">"Welcome to Infinite Tech, where limitless 
+                        innovation shapes the future of technology at an unmatched pace. Beyond tech, we invite you on an immersive journey without limits."</h3>
                 </div>
-                <div class="row">
-                    <div class="col-6 col-md-4">
-                        <div class="card text-center">
-                            <img class="mx-auto d-block my-5" src="assets/image/roket.png" alt="" style="width: 15%;">
-                            <h4>Technological Development</h4>
-                            <p style="margin-top: 10%;">"At Infinite Tech, we lead in accelerating technology with an innovative spirit. 
-                                Committed to shaping the future through rapid technological evolution, we ensure every customer benefits 
-                                from efficient progress."</p>
+                <div data-aos="zoom-in-up" data-aos-duration="700">
+                    <div class="row">
+                        <div class="col-6 col-md-4">
+                            <div class="card text-center">
+                                <img class="mx-auto d-block my-5" src="assets/image/roket.png" alt="" style="width: 15%;">
+                                <h4>Technological Development</h4>
+                                <p style="margin-top: 10%;">"At Infinite Tech, we lead in accelerating technology with an innovative spirit. 
+                                    Committed to shaping the future through rapid technological evolution, we ensure every customer benefits 
+                                    from efficient progress."</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-6 col-md-4">
-                        <div class="card text-center">
-                            <img class="mx-auto d-block my-5" src="assets/image/lampu.png" alt="" style="width: 15%;">
-                            <h4 style="margin-top: -3%;">Technological Innovation</h4>
-                            <p style="margin-top: 10%;">"Welcome to Infinite Tech, where creativity meets technology. 
-                                We pioneer innovation, pushing boundaries to create advanced solutions. Committed to shaping the future through revolutionary discoveries, 
-                                we deliver unimaginable solutions for a continuous era of innovation."</p>
+                        <div class="col-6 col-md-4">
+                            <div class="card text-center">
+                                <img class="mx-auto d-block my-5" src="assets/image/lampu.png" alt="" style="width: 15%;">
+                                <h4 style="margin-top: -3%;">Technological Innovation</h4>
+                                <p style="margin-top: 10%;">"Welcome to Infinite Tech, where creativity meets technology. 
+                                    We pioneer innovation, pushing boundaries to create advanced solutions. Committed to shaping the future through revolutionary discoveries, 
+                                    we deliver unimaginable solutions for a continuous era of innovation."</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-6 col-md-4">
-                        <div class="card text-center">
-                            <img class="mx-auto d-block my-5" src="assets/image/roket.png" alt="" style="width: 15%;">
-                            <h4>Lorem ipsum dolor sit amet</h4>
-                            <p style="margin-top: 10%;"></p>
+                        <div class="col-6 col-md-4">
+                            <div class="card text-center">
+                                <img class="mx-auto d-block" src="assets/image/360.png" alt="" style="margin-top: 18%; margin-bottom: 12%;">
+                                <h4>Digital Transformation</h4>
+                                <p style="margin-top: 9%;">“Technology is changing the way we work, communicate and have fun. 
+                                    From easy communication via mobile phones and social media to work that can be accessed from anywhere, 
+                                    technology provides efficiency and convenience. Even so, regulations on its use are important so that it does not interfere with daily life.”</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -281,10 +286,12 @@
             <h3>New Arrival</h3>
         </div>
         <img class="my-2" src="assets/image/Frame 739.png" alt="">
-    </div>    
-<div class="container mx-auto my-5" style="margin-bottom: 10%;">
-    <img src="assets/image/Frame 702.png" alt="">
-</div>
+    </div> 
+    <div data-aos="zoom-in" data-aos-duration="700">
+        <div class="container mx-auto my-5" style="margin-bottom: 10%;">
+            <img src="assets/image/Frame 702.png" alt="">
+        </div>
+    </div>   
     
     <!-- Footer -->
     <footer class="text-center text-lg-start">
@@ -340,6 +347,10 @@
         </div>
     </footer>
 
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
