--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <title>Contact Us</title>
 </head>
 <body>
-    <button onclick="topFunction()" id="btn-top" title="Go to top"><i class="fa-solid fa-arrow-up"></i></button>
+    <button type="button" class="btn btn-floating btn-lg back-to-top" id="btn-back-to-top" title="back"><i class="fa-solid fa-arrow-up icon-up"></i></button>
     <nav class="navbar navbar-expand-lg fixed-top navbar-scrolled">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><img src="assets/image/logo.png" alt="" style="width: 5%;"></a>
