--- a/product.html
+++ b/product.html
@@ -60,11 +60,36 @@
         } 
         .price { 
           text-align: center; font-size: 24px; color: #ff0000; 
-        } 
+        }
+        .icon-up {
+        margin-left: -.5rem;
+        margin-right: -.5rem;
+        }
+        .back-to-top {
+        display: none;
+        position: fixed;
+        bottom: 20px;
+        right: 30px;
+        z-index: 99;
+        border: none;
+        outline: none;
+        background-color: black;
+        color: white;
+        cursor: pointer;
+        border-radius: 50%; 
+        width: 40px;
+        height: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        }
+        .back-to-top:hover {
+            background-color: #555;
+        }
       </style>
 </head>
 <body>
-    <button onclick="topFunction()" id="btn-top" title="Go to top"><i class="fa-solid fa-arrow-up"></i></button>
+  <button type="button" class="btn btn-floating btn-lg back-to-top" id="btn-back-to-top" title="back"><i class="fa-solid fa-arrow-up icon-up"></i></button>
     <nav class="navbar navbar-expand-lg fixed-top navbar-scrolled">
       <div class="container-fluid">
           <a class="navbar-brand" href="#"><img src="assets/image/logo.png" alt="" style="width: 5%;"></a>
@@ -120,7 +145,7 @@
         </div>
     </div>
 
-    <div class="container my-3">
+    <div class="container my-3" style="cursor: pointer;">
         <div class="row">
             <div class="card mx-auto" data-bs-toggle="modal" data-bs-target="#product1" style="width: 24%;">
                 <img src="assets/image/produk1/p1.png" class="card-img-top" alt=""/>
