--- a/about.html
+++ b/about.html
@@ -107,16 +107,16 @@
                         Our comprehensive range of IT products and services caters to every need.
                     </p>
                     <div class="d-flex mt-3">
-                        <a href="" class="me-4 text-reset">
+                        <a href="https://www.facebook.com/?locale=id_ID" class="me-4 text-reset">
                             <i class="fa-brands fa-facebook"></i>
                         </a>
-                        <a href="" class="me-4 text-reset">
+                        <a href="https://www.instagram.com/" class="me-4 text-reset">
                             <i class="fa-brands fa-instagram"></i>
                         </a>
-                        <a href="" class="me-4 text-reset">
+                        <a href="https://www.linkedin.com/feed/?trk=guest_homepage-basic_google-one-tap-submit" class="me-4 text-reset">
                             <i class="fa-brands fa-linkedin"></i>
                         </a>
-                        <a href="" class="me-4 text-reset">
+                        <a href="https://github.com/fahrillrizal" class="me-4 text-reset">
                             <i class="fa-brands fa-github"></i>
                         </a>
                     </div>  
