--- a/contact.html
+++ b/contact.html
@@ -97,19 +97,19 @@
                         Our comprehensive range of IT products and services caters to every need.
                     </p>
                     <div class="d-flex mt-3">
-                        <a href="" class="me-4 text-reset">
+                        <a href="https://www.facebook.com/?locale=id_ID" class="me-4 text-reset">
                             <i class="fa-brands fa-facebook"></i>
                         </a>
-                        <a href="" class="me-4 text-reset">
+                        <a href="https://www.instagram.com/" class="me-4 text-reset">
                             <i class="fa-brands fa-instagram"></i>
                         </a>
-                        <a href="" class="me-4 text-reset">
+                        <a href="https://www.linkedin.com/feed/?trk=guest_homepage-basic_google-one-tap-submit" class="me-4 text-reset">
                             <i class="fa-brands fa-linkedin"></i>
                         </a>
-                        <a href="" class="me-4 text-reset">
+                        <a href="https://github.com/fahrillrizal" class="me-4 text-reset">
                             <i class="fa-brands fa-github"></i>
                         </a>
-                    </div>  
+                    </div>   
                 </div>
                 <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4 d-flex flex-column">
                     <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
