--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="col-gambar" style="flex: 1; display: flex; justify-content: flex-end; align-items: center;">
                     <img src="assets/image/headset.png" alt="" style="width: 30%; max-height: 100%; object-fit: contain;">
                 </div>
-                <div class="text-content1">
+                <div class="text-content1" style="margin-top: 2%;">
                     <a href="contact.html"><button type="button" class="btn">Get started &nbsp; <i class="fa-solid fa-caret-right fa-lg"></i></button></a>
                 </div>
             </div>
@@ -244,7 +244,7 @@
                 <div data-aos="zoom-in-up" data-aos-duration="700">
                     <div class="row">
                         <div class="col-6 col-md-4">
-                            <div class="card text-center">
+                            <div class="card text-center" style="height: 450px;">
                                 <img class="mx-auto d-block my-5" src="assets/image/roket.png" alt="" style="width: 15%;">
                                 <h4>Technological Development</h4>
                                 <p style="margin-top: 10%;">"At Infinite Tech, we lead in accelerating technology with an innovative spirit. 
@@ -253,7 +253,7 @@
                             </div>
                         </div>
                         <div class="col-6 col-md-4">
-                            <div class="card text-center">
+                            <div class="card text-center" style="height: 450px;">
                                 <img class="mx-auto d-block my-5" src="assets/image/lampu.png" alt="" style="width: 15%;">
                                 <h4 style="margin-top: -3%;">Technological Innovation</h4>
                                 <p style="margin-top: 10%;">"Welcome to Infinite Tech, where creativity meets technology. 
@@ -262,7 +262,7 @@
                             </div>
                         </div>
                         <div class="col-6 col-md-4">
-                            <div class="card text-center">
+                            <div class="card text-center" style="height: 450px;">
                                 <img class="mx-auto d-block" src="assets/image/360.png" alt="" style="margin-top: 18%; margin-bottom: 12%;">
                                 <h4>Digital Transformation</h4>
                                 <p style="margin-top: 9%;">“Technology is changing the way we work, communicate and have fun. 
@@ -307,16 +307,16 @@
                         Our comprehensive range of IT products and services caters to every need.
                     </p>
                     <div class="d-flex mt-3">
-                        <a href="" class="me-4 text-reset">
+                        <a href="https://www.facebook.com/?locale=id_ID" class="me-4 text-reset">
                             <i class="fa-brands fa-facebook"></i>
                         </a>
-                        <a href="" class="me-4 text-reset">
+                        <a href="https://www.instagram.com/" class="me-4 text-reset">
                             <i class="fa-brands fa-instagram"></i>
                         </a>
-                        <a href="" class="me-4 text-reset">
+                        <a href="https://www.linkedin.com/feed/?trk=guest_homepage-basic_google-one-tap-submit" class="me-4 text-reset">
                             <i class="fa-brands fa-linkedin"></i>
                         </a>
-                        <a href="" class="me-4 text-reset">
+                        <a href="https://github.com/fahrillrizal" class="me-4 text-reset">
                             <i class="fa-brands fa-github"></i>
                         </a>
                     </div>  
